# bountix-stellar

./: .contract-address  .env.example  .gitignore  .test-full.json  README.md  SUMMARY.md  eslint.config.mjs  hardhat.config.cjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/admin/: actions.ts  page.tsx
app/applications/: actions.ts
app/auth/: actions.ts
app/contact/: page.tsx
app/creators/: page.tsx
app/dashboard/: page.tsx
app/debug-session/: route.ts
app/diag/: route.ts
app/disclaimer/: page.tsx
components/: language-switcher.tsx  motion-reveal.tsx  providers.tsx  site-footer.tsx  site-header.tsx  trust-page.tsx  waitlist-form.tsx
contracts/soroban/: Cargo.toml
contracts/soroban/src/: lib.rs  test.rs
docs/: constraints.md  escrow-contract.md
lib/: application-form-state.ts  applications.ts  auth-form.ts  completed-work.ts  escrow.ts  i18n.ts  marketplace.ts  notifications.ts  payments.ts  profile-auth.ts  profile-edit-state.ts  profile.ts  referrals.ts  server-user.ts  service-form-state.ts  services.ts  stellar-admin.ts  stellar.ts  task-form-state.ts  task-messages.ts  tasks.ts  waitlist.ts
scripts/: check-balance.mjs  deploy-soroban.mjs  deploy-test-token.mjs  deploy-v1.cjs  deploy.cjs  estimate-v1.cjs  estimate.cjs  get-usdc-alt.mjs  get-usdc-burner.mjs  seed-tasks.mjs  setup-usdc.mjs  test-e2e-xlm.mjs  test-e2e.mjs  test-full.mjs  test-usdc.mjs  test-xlm.mjs
test/: BountixEscrowV0.test.cjs  BountixEscrowV1.test.cjs
(+125 files in other folders)
