[package]
name = "bountix-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = 0
codegen-units = 1

[features]
testutils = ["soroban-sdk/testutils"]
